# RoboAutoTask

./: .gitignore  README.md  latest_pose.txt  motions.yaml  pyproject.toml  tasks.yaml
roboautotask/: __init__.py  __version__.py
roboautotask/calibration/: calibrator.py  detector.py
roboautotask/camera/: realsense.py
roboautotask/configs/: estimation.py  robot.py  svd.py  topic.py
roboautotask/core/: motion.py  operator.py  task.py
roboautotask/estimation/: sensor.py  target.py
roboautotask/robot/: daemon.py  driver.py  utils.py
roboautotask/scripts/: calibrate.py  capture_handeye_data.py  compute_handeye_rt.py  err_dist_measure.py  evaluate_handeye_error.py.py  robo_reset.py  run.py  start.py
roboautotask/utils/: math.py  pose.py
test/playwright/: example01.py  test_example.py
